# SFND-master

./: .gitignore  README.md  settings.json.bak.jsonc
2_Lidar Obstacle Detection/: extract_indices.cpp
2_Lidar Obstacle Detection/SFND_Lidar_Obstacle_Detection/: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
2_Lidar_Obstacle_Detection/SFND_Lidar_Obstacle_Detection/: .gitignore
3_Camera/03_Engineering a Collision Detection System/TTC-Lidar/: CMakeLists.txt
3_Camera/03_Engineering a Collision Detection System/TTC-Lidar/TTC-Lidar_python/: compute_ttc_lidar.py  dataStructures.py  structIO.py
3_Camera/03_Engineering a Collision Detection System/TTC-Lidar/src/: compute_ttc_lidar_ca.cpp
3_Camera/04_Tracking Image Features/: .gitignore
4_Radar/: FFT_MATLAB.m  Radar_Target_Generation_and_Detection.m  solution1_radar_target_generation_and_detection.m  solution2_Radar_Target_Generation_and_Detection.m  solution3_radar_target_generation_and_detection.m  student_Radar_Target_Generation_and_Detection.m
4_Radar/03_Range-Doppler Estimation/: doppler_estimation_student2.m  fast_fourier_transform.py  fast_fourier_transform_student.m  fft_2d.m  range_estimation.m  range_estimation_student.m
4_Radar/04_Clutter, CFAR, AoA/: Copy_of_cfar_oned_student.m  cfar-1d.m  cfar-1d_student.m  cfar_oned_student.m
4_Radar/05_Clustering and Tracking/: cluster_detections.py  master_scenario.m  master_scenario.mlx  scenario_student.m  scenario_student_release.m  student_scenario.m
4_Radar/06_Radar Target Generation and Detection/: Radar_Target_Generation_and_Detection copy.py  (+6 more)
(+119 files in other folders)
